--- a/lab03.ipynb
+++ b/lab03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCjZPdrzOJyPkk3peMQ5jV",
+      "authorship_tag": "ABX9TyMdc41XCrA2aeK/GmO77etF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4079,12 +4079,12 @@
       "source": [
         "# exportar datos en csv\n",
         "archivo = \"data.csv\"\n",
-        "data.to_csv(archivo, index=False)"
+        "data.to_csv(archivo, index=False, encoding=\"latin-1\")"
       ],
       "metadata": {
         "id": "KgUb3TGuNCCd"
       },
-      "execution_count": 32,
+      "execution_count": 36,
       "outputs": []
     },
     {
